# RubikGL

./: CMakeLists.txt  README.md
GLFW/: CMakeLists.txt  GLFW.cpp  GLFW.h
include/: cube.hpp  piece.hpp  settings.hpp  window.hpp
include/shader/: shader.hpp
resources/shaders/: basicCube.frag  basicCube.vert
src/: Cube.cpp  GradientBackground.cpp  Main.cpp  Piece.cpp  RubikGL.cpp  Window.cpp
